--- a/src/styles/hero/style.css
+++ b/src/styles/hero/style.css
@@ -152,7 +152,7 @@
 body {
   margin: 0px;
   padding: 0px;
-  font-family: "Nunito", sans-serif;
+  /* font-family: "Nunito", sans-serif; */
 }
 
 h1,
